[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advent_of_code"
authors = [{name = "Joshua Cook", email = "joshuacook0023@gmail.com"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[tool.mypy]
python_version = "3.9"
plugins = "pydantic.mypy"
pretty = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
