[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advent_of_code"
authors = [{ name = "Joshua Cook", email = "joshuacook0023@gmail.com" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]
dependencies = [
    "numpy >= 1.20.0",
    "colorama >= 0.4.0",
    "pydantic >= 1.8.0",
    "typer >= 0.4.0",
]

[project.optional-dependencies]
test = ["mypy", "black", "flake8", "toml"]


[project.urls]
Source = "https://github.com/jhrcook/advent-of-code_2021"

[project.scripts]
aoc21 = "advent_of_code:main"
